implementations/reference-platform/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lcp-platform
spec:
  type: ClusterIP
  selector:
    app: lcp-platform-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
